--- a/references.bib
+++ b/references.bib
@@ -124,7 +124,9 @@
 
 @misc{noauthor_free_nodate,
 	title = {The {Free} {Lunch} {Is} {Over}: {A} {Fundamental} {Turn} {Toward} {Concurrency} in {Software}},
-	url = {http://www.gotw.ca/publications/concurrency-ddj.htm},
+	author = {Sutter, Herb},
+	month = mar,
+    howpublished = {\url{http://www.gotw.ca/publications/concurrency-ddj.htm}},
 	urldate = {2021-10-30},
 	file = {The Free Lunch Is Over\: A Fundamental Turn Toward Concurrency in Software:/Users/neilweidinger/Zotero/storage/IM56D2HK/concurrency-ddj.html:text/html},
 }
@@ -325,7 +327,7 @@
 @misc{noauthor_advanced_nodate,
 	title = {Advanced {HPC} {Threading}: {Intel}® {oneAPI} {Threading} {Building} {Blocks}},
 	shorttitle = {Advanced {HPC} {Threading}},
-	url = {https://www.intel.com/content/www/us/en/developer/tools/oneapi/onetbb.html},
+	howpublished = {\url{https://www.intel.com/content/www/us/en/developer/tools/oneapi/onetbb.html}},
 	abstract = {Simplify efforts to add parallelism to an application via a flexible runtime library that automatically maps logical parallelism onto threads.},
 	language = {en},
 	urldate = {2022-03-30},
@@ -403,7 +405,7 @@
 
 @misc{niebler_structured_2020,
 	title = {Structured {Concurrency}},
-	url = {https://ericniebler.com/2020/11/08/structured-concurrency/},
+	howpublished = {\url{https://ericniebler.com/2020/11/08/structured-concurrency/}},
 	abstract = {TL;DR: “Structured concurrency” refers to a way to structure async computations so that child operations are guaranteed to complete before their parents, just the way a function is guaranteed…},
 	language = {en-US},
 	urldate = {2022-03-30},
@@ -416,7 +418,7 @@
 
 @misc{smith_notes_nodate,
 	title = {Notes on structured concurrency, or: {Go} statement considered harmful — njs blog},
-	url = {https://vorpus.org/blog/notes-on-structured-concurrency-or-go-statement-considered-harmful/#what-is-a-go-statement-anyway},
+	howpublished = {\url{https://vorpus.org/blog/notes-on-structured-concurrency-or-go-statement-considered-harmful/#what-is-a-go-statement-anyway}},
 	urldate = {2022-03-30},
 	author = {Smith, Nathaniel J.},
 	file = {Notes on structured concurrency, or\: Go statement considered harmful — njs blog:/Users/neilweidinger/Zotero/storage/BLJDBMVW/notes-on-structured-concurrency-or-go-statement-considered-harmful.html:text/html},
@@ -514,14 +516,14 @@
 
 @misc{noauthor_baby_nodate,
 	title = {Baby {Steps}},
-	url = {https://smallcultfollowing.com/babysteps/blog/2015/12/18/rayon-data-parallelism-in-rust/},
+	howpublished = {\url{https://smallcultfollowing.com/babysteps/blog/2015/12/18/rayon-data-parallelism-in-rust/}},
 	urldate = {2022-03-30},
 	file = {Baby Steps:/Users/neilweidinger/Zotero/storage/E7Z2MYLS/rayon-data-parallelism-in-rust.html:text/html},
 }
 
 @misc{stone_how_2021,
 	title = {How {Rust} makes {Rayon}'s data parallelism magical},
-	url = {https://developers.redhat.com/blog/2021/04/30/how-rust-makes-rayons-data-parallelism-magical},
+	howpublished = {\url{https://developers.redhat.com/blog/2021/04/30/how-rust-makes-rayons-data-parallelism-magical}},
 	abstract = {The Rayon data parallelism library makes it easy to run your code in parallel—but the real magic comes from tools in the Rust programming language.},
 	language = {en},
 	urldate = {2022-03-30},
@@ -535,14 +537,14 @@
     
 @misc{noauthor_futuresfuture_nodate,
 	title = {futures::future - {Rust}},
-	url = {https://docs.rs/futures/latest/futures/future/index.html},
+	howpublished = {\url{https://docs.rs/futures/latest/futures/future/index.html}},
 	urldate = {2022-03-30},
 }
 
     
 @misc{ltd_raspberry_nodate,
 	title = {Raspberry {Pi} {Zero} 2 {W}},
-	url = {https://www.raspberrypi.com/products/raspberry-pi-zero-2-w/},
+	howpublished = {\url{https://www.raspberrypi.com/products/raspberry-pi-zero-2-w/}},
 	abstract = {Your tiny, tiny \$15 computer},
 	language = {en-GB},
 	urldate = {2022-04-04},
@@ -552,7 +554,7 @@
 
 @misc{noauthor_join_nodate,
 	title = {join in futures::future - {Rust}},
-	url = {https://docs.rs/futures/latest/futures/future/fn.join.html},
+	howpublished = {\url{https://docs.rs/futures/latest/futures/future/fn.join.html}},
 	urldate = {2022-04-04},
 	file = {join in futures\:\:future - Rust:/Users/neilweidinger/Zotero/storage/8LSYPSDN/fn.join.html:text/html},
 }
@@ -576,7 +578,7 @@
     
 @misc{noauthor_rayon_2022,
 	title = {Rayon},
-	url = {https://github.com/rayon-rs/rayon},
+    howpublished = {\url{https://github.com/rayon-rs/rayon}},
 	abstract = {Rayon: A data parallelism library for Rust},
 	urldate = {2022-04-05},
 	publisher = {rayon-rs},
@@ -589,7 +591,7 @@
     
 @misc{noauthor_rayon_nodate,
 	title = {Rayon {I}/{O} operations warning},
-	url = {https://docs.rs/rayon/latest/rayon/fn.join.html#warning-about-blocking-io},
+	howpublished = {\url{https://docs.rs/rayon/latest/rayon/fn.join.html#warning-about-blocking-io}},
 	urldate = {2022-04-05},
 	file = {join in rayon - Rust:/Users/neilweidinger/Zotero/storage/6JTZV6CA/fn.join.html:text/html},
 }
@@ -597,7 +599,7 @@
 
 @misc{weidinger_rayon-lh_2021,
 	title = {Rayon-{LH}},
-	url = {https://github.com/neilweidinger/rayon},
+    howpublished = {\url{https://github.com/neilweidinger/rayon}},
 	abstract = {Rayon: A data parallelism library for Rust},
 	urldate = {2022-04-05},
 	author = {Weidinger, Neil},
@@ -609,7 +611,7 @@
 @misc{noauthor_does_nodate,
 	title = {Does `rayon::spawn` block until a thread is available? · {Issue} \#522 · rayon-rs/rayon},
 	shorttitle = {Does `rayon},
-	url = {https://github.com/rayon-rs/rayon/issues/522},
+    howpublished = {\url{https://github.com/rayon-rs/rayon/issues/522}},
 	abstract = {This is not currently documented. IMO it should block until a thread is available, to prevent firing off a million threads. Thanks!},
 	language = {en},
 	urldate = {2022-04-05},
@@ -620,7 +622,7 @@
 @misc{rodyamirov_how_2020,
 	type = {Reddit {Post}},
 	title = {How can {I} mix rayon and tokio properly?},
-	url = {www.reddit.com/r/rust/comments/gwm84y/how_can_i_mix_rayon_and_tokio_properly/},
+	howpublished = {\url{www.reddit.com/r/rust/comments/gwm84y/how_can_i_mix_rayon_and_tokio_properly/}},
 	urldate = {2022-04-05},
 	journal = {r/rust},
 	author = {rodyamirov},
@@ -632,7 +634,7 @@
 @misc{joel_dashmap_2022,
 	title = {{DashMap}},
 	copyright = {MIT},
-	url = {https://github.com/xacrimon/dashmap},
+    howpublished = {\url{https://github.com/xacrimon/dashmap}},
 	abstract = {Blazing fast concurrent HashMap for Rust.},
 	urldate = {2022-04-05},
 	author = {Joel},
@@ -644,7 +646,7 @@
     
 @misc{noauthor_rayon-sleep_2022,
 	title = {Rayon {Thread} {Sleep}/{Notification} {Mechanism}},
-	url = {https://github.com/rayon-rs/rayon/blob/1c5277f2b68a79a6746969ce0b1a7a211f340d54/rayon-core/src/sleep/README.md},
+	howpublished = {\url{https://github.com/rayon-rs/rayon/blob/1c5277f2b68a79a6746969ce0b1a7a211f340d54/rayon-core/src/sleep/README.md}},
 	abstract = {Rayon: A data parallelism library for Rust},
 	urldate = {2022-04-05},
 	publisher = {rayon-rs},
@@ -654,8 +656,7 @@
 }
     
 @misc{noauthor_crossbeam_2022,
-	title = {Crossbeam},
-	url = {https://github.com/crossbeam-rs/crossbeam},
+	title = {Crossbeam}, howpublished = {\url{https://github.com/crossbeam-rs/crossbeam}},
 	abstract = {Tools for concurrent programming in Rust},
 	urldate = {2022-04-05},
 	publisher = {Crossbeam},
@@ -666,16 +667,14 @@
 }
 
 @misc{kilian_c_nodate,
-	title = {C++ '{Type} {Erasure}' {Explained} {\textbar} {Dave} {Kilian}'s {Blog}},
-	url = {https://davekilian.com/cpp-type-erasure.html},
+	title = {C++ '{Type} {Erasure}' {Explained} {\textbar} {Dave} {Kilian}'s {Blog}}, howpublished = {\url{https://davekilian.com/cpp-type-erasure.html}},
 	urldate = {2022-04-06},
 	author = {Kilian, Dave},
 	file = {C++ 'Type Erasure' Explained | Dave Kilian's Blog:/Users/neilweidinger/Zotero/storage/U8IWQBAN/cpp-type-erasure.html:text/html},
 }
     
 @misc{noauthor_async-io_2022,
-	title = {async-io},
-	url = {https://github.com/smol-rs/async-io},
+	title = {async-io}, howpublished = {\url{https://github.com/smol-rs/async-io}},
 	abstract = {Async I/O and timers},
 	urldate = {2022-04-06},
 	publisher = {smol-rs},
@@ -686,7 +685,7 @@
     
 @misc{noauthor_rayon-lh_nodate,
 	title = {Rayon-{LH} {Benchmarks}},
-	url = {https://github.com/neilweidinger/latency-hiding-rayon-benchmarks},
+	howpublished = {\url{https://github.com/neilweidinger/latency-hiding-rayon-benchmarks}},
 	abstract = {Contribute to neilweidinger/latency-hiding-rayon-benchmarks development by creating an account on GitHub.},
 	language = {en},
 	urldate = {2022-04-06},
@@ -708,13 +707,64 @@
 @misc{-funswitch-loops_abstracting_2022,
 	type = {Reddit {Comment}},
 	title = {Abstracting {Runtimes}},
-	url = {www.reddit.com/r/rust/comments/sjcf6r/sqlx_proposal_remove_runtime_features_and/hve7pdp/},
+	howpublished = {\url{www.reddit.com/r/rust/comments/sjcf6r/sqlx_proposal_remove_runtime_features_and/hve7pdp/}},
 	urldate = {2022-04-07},
 	journal = {r/rust},
-	author = {-funswitch-loops},
 	month = feb,
 	year = {2022},
-	note = {Post URL: www.reddit.com/r/rust/comments/sjcf6r/sqlx\_proposal\_remove\_runtime\_features\_and/},
 	file = {Reddit Comment Snapshot:/Users/neilweidinger/Zotero/storage/9VMVMVL5/hve7pdp.html:text/html},
+}
+
+@misc{noauthor_future_nodate,
+	title = {Future in std::future - {Rust}},
+	howpublished = {\url{https://doc.rust-lang.org/std/future/trait.Future.html}},
+	urldate = {2022-04-07},
+	file = {Future in std\:\:future - Rust:/Users/neilweidinger/Zotero/storage/3RHW9IYD/trait.Future.html:text/html},
+}
+
+    
+@article{charles_x10_2005,
+	title = {X10: an object-oriented approach to non-uniform cluster computing},
+	volume = {40},
+	issn = {0362-1340},
+	shorttitle = {X10},
+	url = {https://doi.org/10.1145/1103845.1094852},
+	doi = {10.1145/1103845.1094852},
+	abstract = {It is now well established that the device scaling predicted by Moore's Law is no longer a viable option for increasing the clock frequency of future uniprocessor systems at the rate that had been sustained during the last two decades. As a result, future systems are rapidly moving from uniprocessor to multiprocessor configurations, so as to use parallelism instead of frequency scaling as the foundation for increased compute capacity. The dominant emerging multiprocessor structure for the future is a Non-Uniform Cluster Computing (NUCC) system with nodes that are built out of multi-core SMP chips with non-uniform memory hierarchies, and interconnected in horizontally scalable cluster configurations such as blade servers. Unlike previous generations of hardware evolution, this shift will have a major impact on existing software. Current OO language facilities for concurrent and distributed programming are inadequate for addressing the needs of NUCC systems because they do not support the notions of non-uniform data access within a node, or of tight coupling of distributed nodes.We have designed a modern object-oriented programming language, X10, for high performance, high productivity programming of NUCC systems. A member of the partitioned global address space family of languages, X10 highlights the explicit reification of locality in the form of places\vphantom{\{}\}; lightweight activities embodied in async, future, foreach, and ateach constructs; a construct for termination detection (finish); the use of lock-free synchronization (atomic blocks); and the manipulation of cluster-wide global data structures. We present an overview of the X10 programming model and language, experience with our reference implementation, and results from some initial productivity comparisons between the X10 and Java™ languages.},
+	number = {10},
+	urldate = {2022-04-07},
+	journal = {ACM SIGPLAN Notices},
+	author = {Charles, Philippe and Grothoff, Christian and Saraswat, Vijay and Donawa, Christopher and Kielstra, Allan and Ebcioglu, Kemal and von Praun, Christoph and Sarkar, Vivek},
+	month = oct,
+	year = {2005},
+	keywords = {atomic blocks, clocks, data distribution, Java, multithreading, non-uniform cluster computing (NUCC), partitioned global address space (PGAS), places, productivity, scalability, X10},
+	pages = {519--538},
+}
+
+@inproceedings{cave_habanero-java_2011,
+	address = {New York, NY, USA},
+	series = {{PPPJ} '11},
+	title = {Habanero-{Java}: the new adventures of old {X10}},
+	isbn = {978-1-4503-0935-6},
+	shorttitle = {Habanero-{Java}},
+	url = {https://doi.org/10.1145/2093157.2093165},
+	doi = {10.1145/2093157.2093165},
+	abstract = {In this paper, we present the Habanero-Java (HJ) language developed at Rice University as an extension to the original Java-based definition of the X10 language. HJ includes a powerful set of task-parallel programming constructs that can be added as simple extensions to standard Java programs to take advantage of today's multi-core and heterogeneous architectures. The language puts a particular emphasis on the usability and safety of parallel constructs. For example, no HJ program using async, finish, isolated, and phaser constructs can create a logical deadlock cycle. In addition, the future and data-driven task variants of the async construct facilitate a functional approach to parallel programming. Finally, any HJ program written with async, finish, and phaser constructs that is data-race free is guaranteed to also be deterministic. HJ also features two key enhancements that address well known limitations in the use of Java in scientific computing --- the inclusion of complex numbers as a primitive data type, and the inclusion of array-views that support multidimensional views of one-dimensional arrays. The HJ compiler generates standard Java class-files that can run on any JVM for Java 5 or higher. The HJ runtime is responsible for orchestrating the creation, execution, and termination of HJ tasks, and features both work-sharing and work-stealing schedulers. HJ is used at Rice University as an introductory parallel programming language for second-year undergraduate students. A wide variety of benchmarks have been ported to HJ, including a full application that was originally written in Fortran 90. HJ has a rich development and runtime environment that includes integration with DrJava, the addition of a data race detection tool, and service as a target platform for the Intel Concurrent Collections coordination language},
+	urldate = {2022-04-07},
+	booktitle = {Proceedings of the 9th {International} {Conference} on {Principles} and {Practice} of {Programming} in {Java}},
+	publisher = {Association for Computing Machinery},
+	author = {Cavé, Vincent and Zhao, Jisheng and Shirako, Jun and Sarkar, Vivek},
+	month = aug,
+	year = {2011},
+	keywords = {data-race detection, language, parallel programming},
+	pages = {51--61},
+}
+
+    
+@misc{noauthor_pipelining_nodate,
+	title = {Pipelining with futures {\textbar} {Proceedings} of the ninth annual {ACM} symposium on {Parallel} algorithms and architectures},
+	url = {https://dl.acm.org/doi/10.1145/258492.258517},
+	urldate = {2022-04-07},
+	file = {Pipelining with futures | Proceedings of the ninth annual ACM symposium on Parallel algorithms and architectures:/Users/neilweidinger/Zotero/storage/DAACYMZM/258492.html:text/html},
 }
 
